@@ -869,7 +869,7 @@ function student_search_query_advisees($sql) {
     // Are there more majors for this user?
     $major = "";
     // Get a CSV of this student's majors
-    $major = $db->get_student_majors_from_db($student_id, TRUE);
+    $major = fp_get_student_majors($student_id, TRUE);
     $rtn_array[$r]["major"] = $major;
     
     
